gcc/testsuite/rust/compile/bad-crate-name2.rs
#![feature(no_core)]
#![no_core]

#![crate_name = "ğŸ˜…"] // { dg-error "invalid character ...." "" }
fn main() {}
